Fixed bug in ics_utilities.sh with the compression function not finding the file extension correctly. Added ics_cdw_resend.sh to MFANZ bespoke to resend failed interfaces to CDW from ICS/LADS. Added temp path to the ics_loader.config for ICS/LADS environments to support the new resend to CDW script. Updated mqs_trigger_WODU01P1.config file to remove the file alias calls and just use the file directly.

--- a/SOURCE/LICS/BESPOKE/MFANZ/UNIX/PRODUCTION/ics_loader.config
+++ b/SOURCE/LICS/BESPOKE/MFANZ/UNIX/PRODUCTION/ics_loader.config
@@ -30,6 +30,7 @@ ICS_CLASS_PATH   /ics/lad/prod/java
 JAVA_PATH        /opt/java1.4/jre/bin/java
 WORK_PATH        /ics/lad/prod/work
 BIN_PATH         /ics/lad/prod/bin
+TEMP_PATH        /ics/lad/prod/temp
 LOGFILE          /ics/lad/prod/log/ics_integration.log
 
 SERVER           WODU001.AP.MARS
