--- a/SOURCE/LICS/BESPOKE/MFANZ/UNIX/TEST/ics_loader.config
+++ b/SOURCE/LICS/BESPOKE/MFANZ/UNIX/TEST/ics_loader.config
@@ -29,6 +29,7 @@ ICS_CLASS_PATH   /ics/lad/test/java
 JAVA_PATH        /opt/java1.4/jre/bin/java
 WORK_PATH        /ics/lad/test/work
 BIN_PATH         /ics/lad/test/bin
+TEMP_PATH        /ics/lad/test/temp
 LOGFILE          /ics/lad/test/log/ics_integration.log
 
 SERVER           WODU003.AP.MARS
