Updated ics_ladsmanu01.sql to create or replace the public synonym. Removed old ics_outbound_mqft_cmp.sh script file which managed compression over MQ links Fixed issues with ICS scripts so the if statements where handled correctly. Changed extracts to send to all locations. Removed validation process order check for MFA factory (AU10). Changed ics_loader.config for WOD test environment to use the correct AMI tier.

--- a/SOURCE/PDB/BESPOKE/WOD/UNIX/TEST/ics_loader.config
+++ b/SOURCE/PDB/BESPOKE/WOD/UNIX/TEST/ics_loader.config
@@ -26,7 +26,7 @@ BIN_PATH         /ics/test/bin
 LOGFILE          /ics/test/log/ics_integration.log
 
 SERVER           APLX001.AP.MARS
-AMI_TIER         test
+AMI_TIER         APQM003T
 SYS_TIER         test
 ENV_VAR          /usr/local/bin/ami_settier
 DATABASE         WOD023
