Changed trigger file for MFANZ so ATLCIS04.3 was processed as inbound instead of passthru. Changed extracts to use joins in the right order. Added bds_charistic_value_en_ics.sql. Added LADPDB16_loader.sql. Changed LADPDB02_loader.sql so it did not delete data from the header table, but tried to update instead. Fixed bug in update_automation_kitchen.sql and update_automation_tower.sql when R&D process orders are in the cntrl_rec_resource_vw.

--- a/SOURCE/LICS/BESPOKE/MFANZ/UNIX/PRODUCTION/mqs_trigger_WODU01P1.config
+++ b/SOURCE/LICS/BESPOKE/MFANZ/UNIX/PRODUCTION/mqs_trigger_WODU01P1.config
@@ -23,6 +23,8 @@
 # 2.3     Linden Glen        2006-MAY-29 Added CISATL23 for MFA and NZ WH
 # 2.4     Linden Glen        2006-OCT-26 Added PET Tolas Rancho and Dawsons
 # 2.5     Trevor Keon        2008-May-02 Updated to support new unix scripts
+# 2.6     Trevor Keon        2008-May-20 Changed ATLCIS04.3 from passthru to inbound
+# 
 #-------------------------------------------------------------------------------
 #
 # {Source Queue} = {Action/Script} {Parameters}
@@ -36,9 +38,9 @@ QL.OUT.ATLCIS03.1 = ics_passthru_dj.sh QL.OUT.ATLCIS03.1 ATLCIS03 ATLCIS03.1 "-c
 QL.OUT.ATLCIS03.2 = ics_passthru_dj.sh QL.OUT.ATLCIS03.2 ATLCIS03 ATLCIS03.2 "-count 9000"
 QL.OUT.ATLCIS03.3 = ics_passthru_dj.sh QL.OUT.ATLCIS03.3 ATLCIS03 ATLCIS03.3 "-count 50"
 QL.OUT.ATLCIS04.1 = ics_inbound_dj.sh QL.OUT.ATLCIS04.1 ATLCIS04 ATLCIS04.1 *NONE "-count 200" *NO
-QL.OUT.ATLCIS04.2 = ics_passthru_dj.sh QL.OUT.ATLCIS04.2 ATLCIS04 ATLCIS04.2 1
-QL.OUT.ATLCIS04.3 = ics_passthru_dj.sh QL.OUT.ATLCIS04.3 ATLCIS04 ATLCIS04.3 1
-QL.OUT.ATLCIS04.4 = ics_passthru_dj.sh QL.OUT.ATLCIS04.4 ATLCIS04.4 ATLCIS04.4 1
+QL.OUT.ATLCIS04.2 = ics_passthru_dj.sh QL.OUT.ATLCIS04.2 ATLCIS04 ATLCIS04.2 "-count 1"
+QL.OUT.ATLCIS04.3 = ics_inbound_dj.sh QL.OUT.ATLCIS04.3 ATLCIS04 ATLCIS04.3 *NONE "-count 1"
+QL.OUT.ATLCIS04.4 = ics_passthru_dj.sh QL.OUT.ATLCIS04.4 ATLCIS04.4 ATLCIS04.4 "-count 1"
 QL.OUT.ATLCIS05.1 = ics_inbound_dj.sh QL.OUT.ATLCIS05.1 ATLCIS05 ATLCIS05.1 *NONE "-count 200" *NO
 QL.OUT.ATLCIS05.2 = ics_passthru_dj.sh QL.OUT.ATLCIS05.2 ATLCIS05 ATLCIS05.2 "-count 50"
 QL.OUT.ATLCIS05.3 = ics_passthru_dj.sh QL.OUT.ATLCIS05.3 ATLCIS05 ATLCIS05.3 "-count 50"
