--- a/SOURCE/LICS/BESPOKE/MFANZ/UNIX/TEST/mqs_trigger_WODU03T1.config
+++ b/SOURCE/LICS/BESPOKE/MFANZ/UNIX/TEST/mqs_trigger_WODU03T1.config
@@ -38,7 +38,7 @@ QL.OUT.ATLCIS03.2 = ics_passthru_dj.sh QL.OUT.ATLCIS03.2 ATLCIS03 ATLCIS03.2 "-c
 QL.OUT.ATLCIS03.3 = ics_passthru_dj.sh QL.OUT.ATLCIS03.3 ATLCIS03 ATLCIS03.3 "-count 50"
 QL.OUT.ATLCIS04.1 = ics_inbound_dj.sh QL.OUT.ATLCIS04.1 ATLCIS04 ATLCIS04.1 *NONE "-count 200"
 QL.OUT.ATLCIS04.2 = ics_passthru_dj.sh QL.OUT.ATLCIS04.2 ATLCIS04 ATLCIS04.2 "-count 1"
-QL.OUT.ATLCIS04.3 = ics_passthru_dj.sh QL.OUT.ATLCIS04.3 ATLCIS04 ATLCIS04.3 "-count 1"
+QL.OUT.ATLCIS04.3 = ics_inbound_dj.sh QL.OUT.ATLCIS04.3 ATLCIS04 ATLCIS04.3 *NONE "-count 1"
 QL.OUT.ATLCIS04.4 = ics_passthru_dj.sh QL.OUT.ATLCIS04.4 ATLCIS04.4 ATLCIS04.4 "-count 1"
 QL.OUT.ATLCIS05.1 = ics_inbound_dj.sh QL.OUT.ATLCIS05.1 ATLCIS05 ATLCIS05.1 *NONE "-count 200"
 QL.OUT.ATLCIS05.2 = ics_passthru_dj.sh QL.OUT.ATLCIS05.2 ATLCIS05 ATLCIS05.2 "-count 50"
