Added Cardinal warehouse (NZ16) interfaces to trigger file. Added EORD extract to SAP interface config XML file.

--- a/SOURCE/LICS/BESPOKE/MFANZ/UNIX/TEST/mqs_trigger_WODU03T1.config
+++ b/SOURCE/LICS/BESPOKE/MFANZ/UNIX/TEST/mqs_trigger_WODU03T1.config
@@ -431,3 +431,9 @@ QL.OUT.ATLCIS09.4 = ics_inbound_dj.sh QL.OUT.ATLCIS09.4 ATLCIS09 ATLCIS09.4 *NON
 # Tolas Snack to BW Interfaces
 QL.TOLBPP01.TEST = ics_passthru_mq.sh QL.TOLBPP01.TEST TOLBPP01
 QL.TOLBPP02.TEST = ics_passthru_mq.sh QL.TOLBPP02.TEST TOLBPP02
+
+# Cardinal (NZ16)
+QL.OUT.ATLCIS01.22 = ics_inbound_dj.sh QL.OUT.ATLCIS01.22 ATLCIS01 ATLCIS01.22 *NONE "-count 200"
+QL.OUT.ATLCIS03.22 = ics_passthru_dj.sh QL.OUT.ATLCIS03.22 ATLCIS03 ATLCIS03.22 "-count 200"
+QL.OUT.ATLCIS04.22 = ics_inbound_dj.sh QL.OUT.ATLCIS04.22 ATLCIS04 ATLCIS04.22 *NONE "-count 200"
+QL.OUT.ATLCIS05.22 = ics_inbound_dj.sh QL.OUT.ATLCIS05.22 ATLCIS05 ATLCIS05.22 *NONE "-count 200"
