Updated Cardinal WMS entries in test environment.

--- a/SOURCE/LICS/BESPOKE/MFANZ/UNIX/TEST/mqs_trigger_WODU03T1.config
+++ b/SOURCE/LICS/BESPOKE/MFANZ/UNIX/TEST/mqs_trigger_WODU03T1.config
@@ -139,6 +139,19 @@ QL.BALICS23 = ics_passthru_mq.sh QL.BALICS23 CISATL23
 
 QL.EX1ICS23 = ics_passthru_dj.sh QL.EX1ICS23 FLMFLF01 CISATL23 "-count 50"
 
+# Cardinal (NZ16) WMS Interfaces
+QL.CFDICS16.TEST = ics_inbound_mq.sh QL.CFDICS16.TEST WMSCISATL16.1
+QL.CFDICS13.TEST = ics_passthru_mq.sh QL.CFDICS13.TEST CISATL13
+QL.CFDICS05.TEST = ics_passthru_mq.sh QL.CFDICS05.TEST CISATL05
+QL.CFDICS02.TEST = ics_passthru_mq.sh QL.CFDICS02.TEST CISATL02
+QL.CFDICS06.TEST = ics_passthru_mq.sh QL.CFDICS06.TEST CISATL06
+QL.CFDICS23.TEST = ics_passthru_mq.sh QL.CFDICS23.TEST CISATL23
+QL.CFDICS08.TEST = ics_inbound_mq.sh QL.CFDICS08.TEST WMSCIS01.1
+QL.OUT.ATLCIS01.22 = ics_inbound_dj.sh QL.OUT.ATLCIS01.22 ATLCIS01 ATLCIS01.22 *NONE "-count 200"
+QL.OUT.ATLCIS03.22 = ics_passthru_dj.sh QL.OUT.ATLCIS03.22 ATLCIS03 ATLCIS03.22 "-count 200"
+QL.OUT.ATLCIS04.22 = ics_inbound_dj.sh QL.OUT.ATLCIS04.22 ATLCIS04 ATLCIS04.22 *NONE "-count 200"
+QL.OUT.ATLCIS05.22 = ics_inbound_dj.sh QL.OUT.ATLCIS05.22 ATLCIS05 ATLCIS05.22 *NONE "-count 200"
+
 # TOLAS PET WOD DOMESTIC (AU27) <-> ICS <-> ATLAS Interfaces
 QL.TL2ICS01.TEST = ics_inbound_mq.sh QL.TL2ICS01.TEST WMSCISATL16.2
 QL.TL2ICS02.TEST = ics_passthru_mq.sh QL.TL2ICS02.TEST CISATL13
@@ -431,9 +444,3 @@ QL.OUT.ATLCIS09.4 = ics_inbound_dj.sh QL.OUT.ATLCIS09.4 ATLCIS09 ATLCIS09.4 *NON
 # Tolas Snack to BW Interfaces
 QL.TOLBPP01.TEST = ics_passthru_mq.sh QL.TOLBPP01.TEST TOLBPP01
 QL.TOLBPP02.TEST = ics_passthru_mq.sh QL.TOLBPP02.TEST TOLBPP02
-
-# Cardinal (NZ16)
-QL.OUT.ATLCIS01.22 = ics_inbound_dj.sh QL.OUT.ATLCIS01.22 ATLCIS01 ATLCIS01.22 *NONE "-count 200"
-QL.OUT.ATLCIS03.22 = ics_passthru_dj.sh QL.OUT.ATLCIS03.22 ATLCIS03 ATLCIS03.22 "-count 200"
-QL.OUT.ATLCIS04.22 = ics_inbound_dj.sh QL.OUT.ATLCIS04.22 ATLCIS04 ATLCIS04.22 *NONE "-count 200"
-QL.OUT.ATLCIS05.22 = ics_inbound_dj.sh QL.OUT.ATLCIS05.22 ATLCIS05 ATLCIS05.22 *NONE "-count 200"
