Fixed extract query in plant_refrnc_prch_src_extract.sql Updated ics_loader.config to use correct AMI_TIER.

--- a/SOURCE/PDB/BESPOKE/WGI/UNIX/TEST/ics_loader.config
+++ b/SOURCE/PDB/BESPOKE/WGI/UNIX/TEST/ics_loader.config
@@ -26,7 +26,7 @@ BIN_PATH         /ics/test/bin
 LOGFILE          /ics/test/log/ics_integration.log
 
 SERVER           WGILX001.AP.MARS
-AMI_TIER         test
+AMI_TIER         QM0125T
 SYS_TIER         test
 ENV_VAR          /usr/local/bin/ami_settier
 DATABASE         AP0068T
