Added ics_cleanup.sh to MFANZ bespoke folder as it has a number of additional folders to clean Added missing config files for HK test and both MFJ environments Added SHLIB_PATH to relevant config files and added support for that config entry to the ics_utilities.sh and ics_utils_messaging.sh scripts.

--- a/SOURCE/LICS/BESPOKE/CDW/UNIX/TEST/ics_loader.config
+++ b/SOURCE/LICS/BESPOKE/CDW/UNIX/TEST/ics_loader.config
@@ -12,6 +12,7 @@
 # ------- --------------------- ----------- --------------------------------
 # 1.0     Linden Glen           2004-03-24  Original
 # 1.6     Trevor Keon           2008-02-12  Converted to new standard
+# 1.7     Trevor Keon           2008-06-18  Add SHLIB_PATH
 #
 #############################################################################
 
@@ -21,6 +22,7 @@ ARCHIVE_PATH    /ics/cdw/test/archive
 WEBVIEW_PATH    /ics/cdw/test/webview
 ICS_CLASS_PATH  /ics/cdw/test/java
 JAVA_PATH       /opt/java1.4/jre/bin/java
+SHLIB_PATH      /ics/cdw/sapjco32
 WORK_PATH       /ics/cdw/test/work
 BIN_PATH        /ics/cdw/test/bin
 LOGFILE         /ics/cdw/test/log/ics_integration.log
@@ -31,4 +33,3 @@ SYS_TIER        test
 ENV_VAR         /usr/local/bin/ami_settier 
 DATABASE        AP0066T
 USERNAME        ics_app
-PASSWORD        icsgold
