--- a/SOURCE/LICS/BESPOKE/MFANZ/UNIX/TEST/ics_loader.config
+++ b/SOURCE/LICS/BESPOKE/MFANZ/UNIX/TEST/ics_loader.config
@@ -17,6 +17,7 @@
 # 1.4     Megan Henderson       2005-08-17  Added sapjco32
 # 1.5     Steve Gregan          2007-03-02  Added VDS_CFG
 # 1.6     Trevor Keon           2008-02-12  Converted to new standard
+# 1.7     Trevor Keon           2008-06-18  Add SHLIB_PATH
 #
 #############################################################################
 
@@ -27,6 +28,7 @@ WEBVIEW_PATH     /ics/lad/test/webview
 STATISTICS_PATH  /ics/lad/test/statistics
 ICS_CLASS_PATH   /ics/lad/test/java
 JAVA_PATH        /opt/java1.4/jre/bin/java
+SHLIB_PATH       /ics/lad/sapjco32
 WORK_PATH        /ics/lad/test/work
 BIN_PATH         /ics/lad/test/bin
 TEMP_PATH        /ics/lad/test/temp
