--- a/SOURCE/LICS/BESPOKE/HK/UNIX/PRODUCTION/ics_loader.config
+++ b/SOURCE/LICS/BESPOKE/HK/UNIX/PRODUCTION/ics_loader.config
@@ -11,6 +11,7 @@
 # ------- --------------------- ----------- --------------------------------
 # 1.0     Linden Glen           25-06-2006  Original
 # 1.6     Trevor Keon           2008-02-12  Converted to new standard
+# 1.7     Trevor Keon           2008-06-18  Add SHLIB_PATH
 #
 #############################################################################
 
@@ -21,6 +22,7 @@ WEBVIEW_PATH     /ics/lad/prod/webview
 STATISTICS_PATH  /ics/lad/prod/statistics
 ICS_CLASS_PATH   /ics/lad/prod/java
 JAVA_PATH        /opt/java1.4/jre/bin/java
+SHLIB_PATH       /ics/lad/sapjco32
 WORK_PATH        /ics/lad/prod/work
 BIN_PATH         /ics/lad/prod/bin
 LOGFILE          /ics/lad/prod/log/ics_integration.log
