--- a/SOURCE/LICS/BESPOKE/HK/UNIX/TEST/ics_loader.config
+++ b/SOURCE/LICS/BESPOKE/HK/UNIX/TEST/ics_loader.config
@@ -11,29 +11,38 @@
 # Version Name                  Date        Comments
 # ------- --------------------- ----------- --------------------------------
 # 1.0     Linden Glen           24-03-2004  Original
-# 1.1     John Eitel            14-10-2004  Add WEBVIEW_PATH
+# 1.1     John Eitel            2004-10-14  Add WEBVIEW_PATH
 # 1.2     Megan Henderson       2004-10-19  Add ORA_LOG and SYS_TIER
-# 1.3     Megan Henderson       2005-08-17  Added sapjco32 dirs
+# 1.3     Megan Henderson       2005-07-31  Changed AMI paths for filesystem
+# 1.4     Megan Henderson       2005-08-17  Added sapjco32
 # 1.6     Trevor Keon           2008-02-12  Converted to new standard
 # 1.7     Trevor Keon           2008-06-18  Add SHLIB_PATH
 #
 #############################################################################
 
-INBOUND_PATH     /ics/cdw/prod/inbound
-OUTBOUND_PATH    /ics/cdw/prod/outbound
-ARCHIVE_PATH     /ics/cdw/prod/archive
-WEBVIEW_PATH     /ics/cdw/prod/webview
-ICS_CLASS_PATH   /ics/cdw/prod/java
+INBOUND_PATH     /ics/lad/hk/test/inbound
+OUTBOUND_PATH    /ics/lad/hk/test/outbound
+ARCHIVE_PATH     /ics/lad/hk/test/archive
+WEBVIEW_PATH     /ics/lad/hk/test/webview
+STATISTICS_PATH  /ics/lad/hk/test/statistics
+ICS_CLASS_PATH   /ics/lad/hk/test/java
 JAVA_PATH        /opt/java1.4/jre/bin/java
-SHLIB_PATH       /ics/sapjco32
-WORK_PATH        /ics/cdw/prod/work
-BIN_PATH         /ics/cdw/prod/bin
-LOGFILE          /ics/cdw/prod/log/ics_integration.log
+SHLIB_PATH       /ics/lad/sapjco32
+WORK_PATH        /ics/lad/hk/test/work
+BIN_PATH         /ics/lad/hk/test/bin
+LOGFILE          /ics/lad/hk/test/log/ics_integration.log
 
-SERVER           WODU002.AP.MARS
-AMI_TIER         prod
-SYS_TIER         prod
+SERVER           WODU003.AP.MARS
+AMI_TIER         test
+SYS_TIER         test
 ENV_VAR          /usr/local/bin/ami_settier 
-DATABASE        AP0070P
-USERNAME        ics_app
-PASSWORD        icsapp0218p 
+DATABASE         AP0112T
+USERNAME         ics_app
+PASSWORD         icscell
+
+# Required for MFANZ
+TARG_PATH        /ics/cdw/test/inbound
+TARG_QMGR        WODU03T1
+
+
+
