--- a/SOURCE/LICS/BESPOKE/MFJ/UNIX/PRODUCTION/ics_loader.config
+++ b/SOURCE/LICS/BESPOKE/MFJ/UNIX/PRODUCTION/ics_loader.config
@@ -11,13 +11,8 @@
 # Version Name                  Date        Comments
 # ------- --------------------- ----------- --------------------------------
 # 1.0     Linden Glen           24-03-2004  Original
-# 1.1     John Eitel            2004-10-14  Add WEBVIEW_PATH
-# 1.2     Megan Henderson       2004-10-19  Add ORA_LOG and SYS_TIER
-# 1.3     Megan Henderson       2005-07-31  Changed AMI paths for filesystem
-# 1.4     Megan Henderson       2005-08-17  Added sapjco32
-# 1.5     Linden Glen           2006-06-03  MOD: append .pl to MQIF executeable
-# 1.6     Steve Gregan          2007-03-02  Added VDS_CFG
-# 1.6     Trevor Keon           2008-05-01  Converted to new standard
+# 1.1     John Eitel            19-10-2004  Add SYS_TIER and ORA_LOG
+# 1.6     Trevor Keon           2008-02-12  Converted to new standard
 # 1.7     Trevor Keon           2008-06-18  Add SHLIB_PATH
 #
 #############################################################################
@@ -26,26 +21,23 @@ INBOUND_PATH     /ics/lad/prod/inbound
 OUTBOUND_PATH    /ics/lad/prod/outbound
 ARCHIVE_PATH     /ics/lad/prod/archive
 WEBVIEW_PATH     /ics/lad/prod/webview
-STATISTICS_PATH  /ics/lad/prod/statistics
 ICS_CLASS_PATH   /ics/lad/prod/java
 JAVA_PATH        /opt/java1.4/jre/bin/java
 SHLIB_PATH       /ics/lad/sapjco32
 WORK_PATH        /ics/lad/prod/work
 BIN_PATH         /ics/lad/prod/bin
-TEMP_PATH        /ics/lad/prod/temp
 LOGFILE          /ics/lad/prod/log/ics_integration.log
 
-SERVER           WODU001.AP.MARS
+SERVER           TOKU006.AP.MARS
 AMI_TIER         prod
 SYS_TIER         prod
-ENV_VAR          /usr/local/bin/ami_settier 
-DATABASE         AP0064P
+ENV_VAR          /usr/local/bin/ami_settier
+DATABASE         AP0093P
 USERNAME         ics_app
-PASSWORD         grand101
+PASSWORD         icsice
 
 # Required for MFANZ
-TARG_PATH        /ics/cdw/prod/inbound 
-TARG_QMGR        WODU02P1
-HK_TARG_PATH     /ics/lad/prod/inbound
-HK_TARG_QMGR     APQM002P
+TARG_PATH        /ics/lad/prod/inbound
+TARG_QMGR        TOKU06P1
+
 
