--- a/SOURCE/LICS/BESPOKE/CDW/UNIX/TEST/ics_loader.config
+++ b/SOURCE/LICS/BESPOKE/CDW/UNIX/TEST/ics_loader.config
@@ -33,3 +33,4 @@ SYS_TIER        test
 ENV_VAR         /usr/local/bin/ami_settier 
 DATABASE        AP0066T
 USERNAME        ics_app
+PASSWORD        icsgold
