--- a/SOURCE/PDB/BESPOKE/BTH/UNIX/TEST/ics_loader.config
+++ b/SOURCE/PDB/BESPOKE/BTH/UNIX/TEST/ics_loader.config
@@ -26,7 +26,7 @@ BIN_PATH         /ics/test/bin
 LOGFILE          /ics/test/log/ics_integration.log
 
 SERVER           BTHLX002.AP.MARS
-AMI_TIER         test
+AMI_TIER         APQM004T
 SYS_TIER         test
 ENV_VAR          /usr/local/bin/ami_settier
 DATABASE         BTH005
