Added NZ16 interfaces.

--- a/SOURCE/LICS/BESPOKE/MFANZ/UNIX/PRODUCTION/mqs_trigger_WODU01P1.config
+++ b/SOURCE/LICS/BESPOKE/MFANZ/UNIX/PRODUCTION/mqs_trigger_WODU01P1.config
@@ -24,6 +24,7 @@
 # 2.4     Linden Glen        2006-OCT-26 Added PET Tolas Rancho and Dawsons
 # 2.5     Trevor Keon        2008-May-02 Updated to support new unix scripts
 # 2.6     Trevor Keon        2008-May-20 Changed ATLCIS04.3 from passthru to inbound
+# 2.7     Trevor Keon        2008-Jul-18 Added NZ16 interfaces
 # 
 #-------------------------------------------------------------------------------
 #
@@ -145,6 +146,19 @@ QL.TOLASN06 = ics_inbound_mq.sh QL.TOLASN06 TOLASN06
 QL.TL1ICS23 = ics_passthru_mq.sh QL.TL1ICS23 CISATL23
 QL.BALICS23 = ics_passthru_mq.sh QL.BALICS23 CISATL23
 QL.EX1ICS23 = ics_passthru_dj.sh QL.EX1ICS23 FLMFLF01 CISATL23 "-count 50"
+
+# Cardinal (NZ16) WMS Interfaces
+QL.CFDICS16 = ics_inbound_mq.sh QL.CFDICS16 WMSCISATL16.1
+QL.CFDICS13 = ics_passthru_mq.sh QL.CFDICS13 CISATL13
+QL.CFDICS05 = ics_passthru_mq.sh QL.CFDICS05 CISATL05
+QL.CFDICS02 = ics_passthru_mq.sh QL.CFDICS02 CISATL02
+QL.CFDICS06 = ics_passthru_mq.sh QL.CFDICS06 CISATL06
+QL.CFDICS23 = ics_passthru_mq.sh QL.CFDICS23 CISATL23
+QL.CFDICS08 = ics_inbound_mq.sh QL.CFDICS08 WMSCIS01.1
+QL.OUT.ATLCIS01.22 = ics_inbound_dj.sh QL.OUT.ATLCIS01.22 ATLCIS01 ATLCIS01.22 *NONE "-count 200"
+QL.OUT.ATLCIS03.22 = ics_passthru_dj.sh QL.OUT.ATLCIS03.22 ATLCIS03 ATLCIS03.22 "-count 200"
+QL.OUT.ATLCIS04.22 = ics_inbound_dj.sh QL.OUT.ATLCIS04.22 ATLCIS04 ATLCIS04.22 *NONE "-count 200"
+QL.OUT.ATLCIS05.22 = ics_inbound_dj.sh QL.OUT.ATLCIS05.22 ATLCIS05 ATLCIS05.22 *NONE "-count 200"
 
 #TOLAS PET WOD DOMESTIC (AU27) <-> ICS Interfaces
 QL.TL2ICS01 = ics_inbound_mq.sh QL.TL2ICS01 WMSCISATL16.2
