Removed Exel WH interfaces as per CR #40174.

--- a/SOURCE/LICS/BESPOKE/MFANZ/UNIX/PRODUCTION/mqs_trigger_WODU01P1.config
+++ b/SOURCE/LICS/BESPOKE/MFANZ/UNIX/PRODUCTION/mqs_trigger_WODU01P1.config
@@ -25,6 +25,7 @@
 # 2.5     Trevor Keon        2008-May-02 Updated to support new unix scripts
 # 2.6     Trevor Keon        2008-May-20 Changed ATLCIS04.3 from passthru to inbound
 # 2.7     Trevor Keon        2008-Jul-18 Added NZ16 interfaces
+# 2.8     Trevor Keon        2008-Oct-02 Removed Exel WH interfaces
 # 
 #-------------------------------------------------------------------------------
 #
@@ -34,16 +35,12 @@
 QL.OUT.ATLCIS01.1 = ics_inbound_dj.sh QL.OUT.ATLCIS01.1 ATLCIS01 ATLCIS01.1 *NONE "-count 200" *NO
 QL.OUT.ATLCIS01.2 = ics_passthru_dj.sh QL.OUT.ATLCIS01.2 ATLCIS01 ATLCIS01.2 "-count 50"
 QL.OUT.ATLCIS01.3 = ics_passthru_dj.sh QL.OUT.ATLCIS01.3 ATLCIS01 ATLCIS01.3 "-count 50"
-QL.OUT.ATLCIS01.4 = ics_passthru_dj.sh QL.OUT.ATLCIS01.4 ATLCIS01 ATLCIS01.4 "-count 50"
 QL.OUT.ATLCIS03.1 = ics_passthru_dj.sh QL.OUT.ATLCIS03.1 ATLCIS03 ATLCIS03.1 "-count 50"
-QL.OUT.ATLCIS03.2 = ics_passthru_dj.sh QL.OUT.ATLCIS03.2 ATLCIS03 ATLCIS03.2 "-count 9000"
 QL.OUT.ATLCIS03.3 = ics_passthru_dj.sh QL.OUT.ATLCIS03.3 ATLCIS03 ATLCIS03.3 "-count 50"
 QL.OUT.ATLCIS04.1 = ics_inbound_dj.sh QL.OUT.ATLCIS04.1 ATLCIS04 ATLCIS04.1 *NONE "-count 200" *NO
 QL.OUT.ATLCIS04.2 = ics_passthru_dj.sh QL.OUT.ATLCIS04.2 ATLCIS04 ATLCIS04.2 "-count 1"
 QL.OUT.ATLCIS04.3 = ics_inbound_dj.sh QL.OUT.ATLCIS04.3 ATLCIS04 ATLCIS04.3 *NONE "-count 1"
-QL.OUT.ATLCIS04.4 = ics_passthru_dj.sh QL.OUT.ATLCIS04.4 ATLCIS04.4 ATLCIS04.4 "-count 1"
 QL.OUT.ATLCIS05.1 = ics_inbound_dj.sh QL.OUT.ATLCIS05.1 ATLCIS05 ATLCIS05.1 *NONE "-count 200" *NO
-QL.OUT.ATLCIS05.2 = ics_passthru_dj.sh QL.OUT.ATLCIS05.2 ATLCIS05 ATLCIS05.2 "-count 50"
 QL.OUT.ATLCIS05.3 = ics_passthru_dj.sh QL.OUT.ATLCIS05.3 ATLCIS05 ATLCIS05.3 "-count 50"
 QL.OUT.ATLCIS06 = ics_inbound_dj.sh QL.OUT.ATLCIS06 ATLCIS06 ATLCIS06 *NONE "-count 50" *NO
 
@@ -125,13 +122,6 @@ QL.BALICS05 = ics_passthru_mq.sh QL.BALICS05 CISATL02
 QL.BALICS06 = ics_passthru_mq.sh QL.BALICS06 CISATL06
 QL.BALICS07 = ics_passthru_mq.sh QL.BALICS07 CISATL07
 QL.BALICS08 = ics_inbound_mq.sh QL.BALICS08 WMSCIS01.1
-
-# NZ Exel Warehouse Configurations
-QL.EX1ICS02 = ics_passthru_dj.sh QL.EX1ICS02 FLMFLF01 CISATL13 "-count 50"
-QL.EX1ICS04 = ics_passthru_dj.sh QL.EX1ICS04 FLMFLF01 CISATL05 "-count 50"
-QL.EX1ICS05 = ics_passthru_dj.sh QL.EX1ICS05 FLMFLF01 CISATL02 "-count 50"
-QL.EX1ICS06 = ics_passthru_dj.sh QL.EX1ICS06 FLMFLF01 CISATL06 "-count 50"
-QL.EX1ICS07 = ics_passthru_dj.sh QL.EX1ICS07 FLMFLF01 CISATL07 "-count 50"
 
 # Promax Interfaces ICS/PMX
 QL.CISATL03 = ics_passthru_mq.sh QL.CISATL03 CISATL03.1
