--- a/SOURCE/LICS/BESPOKE/MFANZ/UNIX/TEST/mqs_trigger_WODU03T1.config
+++ b/SOURCE/LICS/BESPOKE/MFANZ/UNIX/TEST/mqs_trigger_WODU03T1.config
@@ -22,6 +22,9 @@
 # 2.0     Linden Glen        2005-Sep-07 Added PET WH Queue definitions
 # 2.1     Sunil Mandalika    2007-Jun-08 Changed QL.OUT.ATLLAD01 to QL.OUT.ATLLAD01.1 
 # 2.2     Trevor Keon        2008-Feb-12 Changed to contain ICS interfaces only
+# 2.6     Trevor Keon        2008-May-20 Changed ATLCIS04.3 from passthru to inbound
+# 2.7     Trevor Keon        2008-Jul-18 Added NZ16 interfaces
+# 2.8     Trevor Keon        2008-Oct-02 Removed Exel WH interfaces
 #-------------------------------------------------------------------------------
 
 # {Source Queue} {Script} {Queue} {Interface ID} {Interface ID} {FWD Q} {DJ STOP}
@@ -32,16 +35,12 @@
 QL.OUT.ATLCIS01.1 = ics_inbound_dj.sh QL.OUT.ATLCIS01.1 ATLCIS01 ATLCIS01.1 *NONE "-count 200"
 QL.OUT.ATLCIS01.2 = ics_passthru_dj.sh QL.OUT.ATLCIS01.2 ATLCIS01 ATLCIS01.2 "-count 50"
 QL.OUT.ATLCIS01.3 = ics_passthru_dj.sh QL.OUT.ATLCIS01.3 ATLCIS01 ATLCIS01.3 "-count 50"
-QL.OUT.ATLCIS01.4 = ics_passthru_dj.sh QL.OUT.ATLCIS01.4 ATLCIS01 ATLCIS01.4 "-count 50"
 QL.OUT.ATLCIS03.1 = ics_passthru_dj.sh QL.OUT.ATLCIS03.1 ATLCIS03 ATLCIS03.1 "-count 50"
-QL.OUT.ATLCIS03.2 = ics_passthru_dj.sh QL.OUT.ATLCIS03.2 ATLCIS03 ATLCIS03.2 "-count 50"
 QL.OUT.ATLCIS03.3 = ics_passthru_dj.sh QL.OUT.ATLCIS03.3 ATLCIS03 ATLCIS03.3 "-count 50"
 QL.OUT.ATLCIS04.1 = ics_inbound_dj.sh QL.OUT.ATLCIS04.1 ATLCIS04 ATLCIS04.1 *NONE "-count 200"
 QL.OUT.ATLCIS04.2 = ics_passthru_dj.sh QL.OUT.ATLCIS04.2 ATLCIS04 ATLCIS04.2 "-count 1"
 QL.OUT.ATLCIS04.3 = ics_inbound_dj.sh QL.OUT.ATLCIS04.3 ATLCIS04 ATLCIS04.3 *NONE "-count 1"
-QL.OUT.ATLCIS04.4 = ics_passthru_dj.sh QL.OUT.ATLCIS04.4 ATLCIS04.4 ATLCIS04.4 "-count 1"
 QL.OUT.ATLCIS05.1 = ics_inbound_dj.sh QL.OUT.ATLCIS05.1 ATLCIS05 ATLCIS05.1 *NONE "-count 200"
-QL.OUT.ATLCIS05.2 = ics_passthru_dj.sh QL.OUT.ATLCIS05.2 ATLCIS05 ATLCIS05.2 "-count 50"
 QL.OUT.ATLCIS05.3 = ics_passthru_dj.sh QL.OUT.ATLCIS05.3 ATLCIS05 ATLCIS05.3 "-count 50"
 QL.OUT.ATLCIS05.21 = ics_passthru_dj.sh QL.OUT.ATLCIS05.21 ATLCIS05 ATLCIS05.21 *NONE "-count 200"
 QL.OUT.ATLCIS06 = ics_inbound_dj.sh QL.OUT.ATLCIS06 ATLCIS06 ATLCIS06 *NONE "-count 50"
@@ -116,13 +115,6 @@ QL.BALICS06 = ics_passthru_mq.sh QL.BALICS06 CISATL06
 QL.BALICS07 = ics_passthru_mq.sh QL.BALICS07 CISATL07
 QL.BALICS08 = ics_inbound_mq.sh QL.BALICS08 WMSCIS01.1
 
-# Exel WMS interfaces - L.Glen 10-02-2005
-QL.EX1ICS02 = ics_passthru_dj.sh QL.EX1ICS02 FLMFLF01 CISATL13 "-count 50"
-QL.EX1ICS04 = ics_passthru_dj.sh QL.EX1ICS04 FLMFLF01 CISATL05 "-count 50"
-QL.EX1ICS05 = ics_passthru_dj.sh QL.EX1ICS05 FLMFLF01 CISATL02 "-count 50"
-QL.EX1ICS06 = ics_passthru_dj.sh QL.EX1ICS06 FLMFLF01 CISATL06 "-count 50"
-QL.EX1ICS07 = ics_passthru_dj.sh QL.EX1ICS07 FLMFLF01 CISATL07 "-count 50"
-
 # Added 15-Sep-04 by Stephen Gordon (CR: SEGN-64U3AS)
 QL.CDWICS01 = ics_inbound_mq.sh QL.CDWICS01 CDWICS01
 QL.CDWICS02 = ics_inbound_mq.sh QL.CDWICS02 CDWICS02
@@ -133,7 +125,7 @@ QL.KF1ICS02 = ics_passthru_mq.sh QL.KF1ICS02 CISATL13
 QL.KF1ICS04 = ics_passthru_mq.sh QL.KF1ICS04 CISATL05
 QL.KF1ICS05 = ics_passthru_mq.sh QL.KF1ICS05 CISATL02
 
-# Additional NZ EXEL/MAXWELL/LINFOX Interfaces
+# Additional NZ MAXWELL/LINFOX Interfaces
 QL.TL1ICS23.TEST = ics_passthru_mq.sh QL.TL1ICS23.TEST CISATL23
 QL.BALICS23 = ics_passthru_mq.sh QL.BALICS23 CISATL23
 
