Updated ics_std_code.inc files to handle Single Sign On (SSO) which included MARSDOM before the 5/3. Added SHLIB to the ics_loader.config files. Added ATLCIS09 for AU41/42-FG in mqs_trigger_WODU03T1.config. Added CUC folder for webpage files.

--- a/SOURCE/LICS/BESPOKE/EFEX/UNIX/PRODUCTION/ics_loader.config
+++ b/SOURCE/LICS/BESPOKE/EFEX/UNIX/PRODUCTION/ics_loader.config
@@ -11,6 +11,7 @@
 # Version Name                  Date        Comments
 # ------- --------------------- ----------- --------------------------------
 # 1.0     Trevor Keon           2008-04-03  Original
+# 1.7     Trevor Keon           2008-10-23  Add SHLIB_PATH
 #
 #############################################################################
 INBOUND_PATH    /ics/efex/prod/inbound
@@ -19,6 +20,7 @@ ARCHIVE_PATH    /ics/efex/prod/archive
 WEBVIEW_PATH    /ics/efex/prod/webview
 ICS_CLASS_PATH  /ics/efex/prod/java
 JAVA_PATH       /opt/java1.4/jre/bin/java
+SHLIB_PATH      /ics/sapjco32
 WORK_PATH       /ics/efex/prod/work
 BIN_PATH        /ics/efex/prod/bin
 LOGFILE         /ics/efex/prod/log/ics_integration.log
