--- a/SOURCE/LICS/BESPOKE/EFEX/UNIX/TEST/ics_loader.config
+++ b/SOURCE/LICS/BESPOKE/EFEX/UNIX/TEST/ics_loader.config
@@ -11,6 +11,7 @@
 # Version Name                  Date        Comments
 # ------- --------------------- ----------- --------------------------------
 # 1.0     Trevor Keon           2008-04-03  Original
+# 1.7     Trevor Keon           2008-10-23  Add SHLIB_PATH
 #
 #############################################################################
 
@@ -20,6 +21,7 @@ ARCHIVE_PATH    /ics/efex/test/archive
 WEBVIEW_PATH    /ics/efex/test/webview
 ICS_CLASS_PATH  /ics/efex/test/java
 JAVA_PATH       /opt/java1.4/jre/bin/java
+SHLIB_PATH      /ics/lad/sapjco32
 WORK_PATH       /ics/efex/test/work
 BIN_PATH        /ics/efex/test/bin
 LOGFILE         /ics/efex/test/log/ics_integration.log
