--- a/SOURCE/LICS/BESPOKE/MFANZ/UNIX/TEST/mqs_trigger_WODU03T1.config
+++ b/SOURCE/LICS/BESPOKE/MFANZ/UNIX/TEST/mqs_trigger_WODU03T1.config
@@ -25,6 +25,7 @@
 # 2.6     Trevor Keon        2008-May-20 Changed ATLCIS04.3 from passthru to inbound
 # 2.7     Trevor Keon        2008-Jul-18 Added NZ16 interfaces
 # 2.8     Trevor Keon        2008-Oct-02 Removed Exel WH interfaces
+# 2.9     Trevor Keon        2008-Nov-12 Added ATLCIS09 for AU41/42-FG
 #-------------------------------------------------------------------------------
 
 # {Source Queue} {Script} {Queue} {Interface ID} {Interface ID} {FWD Q} {DJ STOP}
@@ -315,9 +316,6 @@ QL.OUT.ATLCIS05.14 =  ics_inbound_dj.sh QL.OUT.ATLCIS05.14 ATLCIS05 ATLCIS05.14 
 #TOLAS PET WOD RANCHO (AU24) and DAWSONS (AU34) <-> ICS Interfaces
 QL.OUT.ATLCIS09.1 = ics_inbound_dj.sh QL.OUT.ATLCIS09.1 ATLCIS09 ATLCIS09.1 *NONE "-count 50" *NO
 QL.OUT.ATLCIS09.2 = ics_inbound_dj.sh QL.OUT.ATLCIS09.2 ATLCIS09 ATLCIS09.2 *NONE "-count 50" *NO
-QL.OUT.ATLCIS09.3 = ics_inbound_dj.sh QL.OUT.ATLCIS09.3 ATLCIS09 ATLCIS09.3 *NONE "-count 50" *NO
-
-QL.OUT.ATLCIS09.5 = ics_inbound_dj.sh QL.OUT.ATLCIS09.5 ATLCIS09 ATLCIS09.5 *NONE "-count 50" *NO
 
 QL.ICSTL908.TEST = ics_inbound_mq.sh QL.ICSTL908.TEST WMSCIS01.2
 QL.ICSTLA08.TEST = ics_inbound_mq.sh QL.ICSTLA08.TEST WMSCIS01.2
@@ -398,21 +396,23 @@ QL.OUT.ATLCIS03.15 = ics_inbound_dj.sh QL.OUT.ATLCIS03.15 ATLCIS03 ATLCIS03.15 *
 QL.OUT.ATLCIS07.15 = ics_inbound_dj.sh QL.OUT.ATLCIS07.15 ATLCIS07 ATLCIS07.15 *NONE "-count 200"
 QL.OUT.ATLCIS08.15 = ics_inbound_dj.sh QL.OUT.ATLCIS08.15 ATLCIS08 ATLCIS08.15 *NONE "-count 200"
 
-# Tolas Snack Somerton (Linfox) (AU42-FG)
+# Tolas Snack Somerton (Linfox) (AU41-FG)
 QL.OUT.ATLCIS04.16 = ics_inbound_dj.sh QL.OUT.ATLCIS04.16 ATLCIS04 ATLCIS04.16 *NONE "-count 200"
 QL.OUT.ATLCIS01.16 = ics_inbound_dj.sh QL.OUT.ATLCIS01.16 ATLCIS01 ATLCIS01.16 *NONE "-count 200"
 QL.OUT.ATLCIS05.16 = ics_inbound_dj.sh QL.OUT.ATLCIS05.16 ATLCIS05 ATLCIS05.16 *NONE "-count 200"
 QL.OUT.ATLCIS03.16 = ics_inbound_dj.sh QL.OUT.ATLCIS03.16 ATLCIS03 ATLCIS03.16 *NONE "-count 200"
 QL.OUT.ATLCIS07.16 = ics_inbound_dj.sh QL.OUT.ATLCIS07.16 ATLCIS07 ATLCIS07.16 *NONE "-count 200"
 QL.OUT.ATLCIS08.16 = ics_inbound_dj.sh QL.OUT.ATLCIS08.16 ATLCIS08 ATLCIS08.16 *NONE "-count 200"
+QL.OUT.ATLCIS09.16 = ics_inbound_dj.sh QL.OUT.ATLCIS09.16 ATLCIS09 ATLCIS09.16 *NONE "-count 200"
 
-# Tolas Snack Somerton (Linfox) (AU41-FG)
+# Tolas Snack Somerton (Linfox) (AU42-FG)
 QL.OUT.ATLCIS04.17 = ics_inbound_dj.sh QL.OUT.ATLCIS04.17 ATLCIS04 ATLCIS04.17 *NONE "-count 200"
 QL.OUT.ATLCIS01.17 = ics_inbound_dj.sh QL.OUT.ATLCIS01.17 ATLCIS01 ATLCIS01.17 *NONE "-count 200"
 QL.OUT.ATLCIS05.17 = ics_inbound_dj.sh QL.OUT.ATLCIS05.17 ATLCIS05 ATLCIS05.17 *NONE "-count 200"
 QL.OUT.ATLCIS03.17 = ics_inbound_dj.sh QL.OUT.ATLCIS03.17 ATLCIS03 ATLCIS03.17 *NONE "-count 200"
 QL.OUT.ATLCIS07.17 = ics_inbound_dj.sh QL.OUT.ATLCIS07.17 ATLCIS07 ATLCIS07.17 *NONE "-count 200"
 QL.OUT.ATLCIS08.17 = ics_inbound_dj.sh QL.OUT.ATLCIS08.17 ATLCIS08 ATLCIS08.17 *NONE "-count 200"
+QL.OUT.ATLCIS09.17 = ics_inbound_dj.sh QL.OUT.ATLCIS09.17 ATLCIS09 ATLCIS09.17 *NONE "-count 200"
 
 # Tolas Snack Somerton (Linfox) (AU45-FG)
 QL.OUT.ATLCIS04.18 = ics_inbound_dj.sh QL.OUT.ATLCIS04.18 ATLCIS04 ATLCIS04.18 *NONE "-count 200"
@@ -427,7 +427,6 @@ QL.OUT.ATLCIS04.19 = ics_inbound_dj.sh QL.OUT.ATLCIS04.19 ATLCIS04 ATLCIS04.19 *
 QL.OUT.ATLCIS05.19 = ics_inbound_dj.sh QL.OUT.ATLCIS05.19 ATLCIS05 ATLCIS05.19 *NONE "-count 200"
 QL.OUT.ATLCIS09.3 = ics_inbound_dj.sh QL.OUT.ATLCIS09.3 ATLCIS09 ATLCIS09.3 *NONE "-count 200"
 
-
 # Tolas Snack Somerton (Linfox) (AU41-R&P)
 QL.OUT.ATLCIS04.20 = ics_inbound_dj.sh QL.OUT.ATLCIS04.20 ATLCIS04 ATLCIS04.20 *NONE "-count 200"
 QL.OUT.ATLCIS05.20 = ics_inbound_dj.sh QL.OUT.ATLCIS05.20 ATLCIS05 ATLCIS05.20 *NONE "-count 200"
@@ -436,3 +435,6 @@ QL.OUT.ATLCIS09.4 = ics_inbound_dj.sh QL.OUT.ATLCIS09.4 ATLCIS09 ATLCIS09.4 *NON
 # Tolas Snack to BW Interfaces
 QL.TOLBPP01.TEST = ics_passthru_mq.sh QL.TOLBPP01.TEST TOLBPP01
 QL.TOLBPP02.TEST = ics_passthru_mq.sh QL.TOLBPP02.TEST TOLBPP02
+
+# Tolas Food Wyong (Linfox) (AU11)
+QL.OUT.ATLCIS09.5 = ics_inbound_dj.sh QL.OUT.ATLCIS09.5 ATLCIS09 ATLCIS09.5 *NONE "-count 50" *NO
