Added CISATL05 for AU41/42-FG

--- a/SOURCE/LICS/BESPOKE/MFANZ/UNIX/TEST/mqs_trigger_WODU03T1.config
+++ b/SOURCE/LICS/BESPOKE/MFANZ/UNIX/TEST/mqs_trigger_WODU03T1.config
@@ -26,6 +26,7 @@
 # 2.7     Trevor Keon        2008-Jul-18 Added NZ16 interfaces
 # 2.8     Trevor Keon        2008-Oct-02 Removed Exel WH interfaces
 # 2.9     Trevor Keon        2008-Nov-12 Added ATLCIS09 for AU41/42-FG
+# 2.9.1   Trevor Keon        2008-Nov-21 Added CISATL05 for AU41/42-FG
 #-------------------------------------------------------------------------------
 
 # {Source Queue} {Script} {Queue} {Interface ID} {Interface ID} {FWD Q} {DJ STOP}
@@ -335,6 +336,7 @@ QL.TLBICS10.TEST = ics_inbound_mq.sh QL.TLBICS10.TEST WMSCIS02.3
 #Tolas Snack Somerton  (Linfox)-> ICS - AU41-FG
 QL.TLCICS05.TEST = ics_passthru_mq.sh QL.TLCICS05.TEST CISATL02
 QL.TLCICS09.TEST = ics_passthru_mq.sh QL.TLCICS09.TEST CISATL04
+QL.TLCICS04.TEST = ics_passthru_mq.sh QL.TLCICS04.TEST CISATL05
 QL.TLCICS06.TEST = ics_passthru_mq.sh QL.TLCICS06.TEST CISATL06
 QL.TLCICS20.TEST = ics_passthru_mq.sh QL.TLCICS20.TEST CISATL20
 QL.TLCICS21.TEST = ics_passthru_mq.sh QL.TLCICS21.TEST CISATL21
@@ -347,6 +349,7 @@ QL.TLCICS10.TEST = ics_inbound_mq.sh QL.TLCICS10.TEST WMSCIS02.3
 #Tolas Snack Linfox Ballarat -> ICS - AU42-FG
 QL.TLDICS05.TEST = ics_passthru_mq.sh QL.TLDICS05.TEST CISATL02
 QL.TLDICS09.TEST = ics_passthru_mq.sh QL.TLDICS09.TEST CISATL04
+QL.TLDICS04.TEST = ics_passthru_mq.sh QL.TLDICS04.TEST CISATL05
 QL.TLDICS06.TEST = ics_passthru_mq.sh QL.TLDICS06.TEST CISATL06
 QL.TLDICS20.TEST = ics_passthru_mq.sh QL.TLDICS20.TEST CISATL20
 QL.TLDICS21.TEST = ics_passthru_mq.sh QL.TLDICS21.TEST CISATL21
