Added TOLPDB02.5 interface as per CR #41821

--- a/SOURCE/PDB/BESPOKE/MCA/UNIX/PRODUCTION/mqs_trigger_QM0075P.config
+++ b/SOURCE/PDB/BESPOKE/MCA/UNIX/PRODUCTION/mqs_trigger_QM0075P.config
@@ -11,6 +11,7 @@
 # Version Name                  Date        Comments
 # ------- ------------------ ----------- ---------------------------------------
 # 1.0     Trevor Keon        2008-Mar-17 Initial release
+# 1.1     Trevor Keon        2008-Dec-18 Added TOLPDB02.5 interface
 #-------------------------------------------------------------------------------
 
 # {Source Queue} {Script} {Queue} {Interface ID} {Interface ID} {FWD Q} {DJ STOP}
@@ -20,3 +21,4 @@
 
 # Tolas interfaces
 QL.TOLDCO01 = ics_inbound_mq.sh QL.TOLDCO01 TOLPDB01.5
+QL.TOLDCO02 = ics_inbound_mq.sh QL.TOLDCO02 TOLPDB02.5
