--- a/SOURCE/PDB/BESPOKE/MCA/UNIX/TEST/mqs_trigger_QM0077T.config
+++ b/SOURCE/PDB/BESPOKE/MCA/UNIX/TEST/mqs_trigger_QM0077T.config
@@ -20,3 +20,4 @@
 
 # Tolas interfaces
 QL.TOLDCO01.TEST = ics_inbound_mq.sh QL.TOLDCO01.TEST TOLPDB01.5
+QL.TOLDCO02.TEST = ics_inbound_mq.sh QL.TOLDCO02.TEST TOLPDB02.5
