Added ATLCIS09 & CISATL05 for AU41/42-FG

--- a/SOURCE/LICS/BESPOKE/MFANZ/UNIX/PRODUCTION/mqs_trigger_WODU01P1.config
+++ b/SOURCE/LICS/BESPOKE/MFANZ/UNIX/PRODUCTION/mqs_trigger_WODU01P1.config
@@ -26,6 +26,7 @@
 # 2.6     Trevor Keon        2008-May-20 Changed ATLCIS04.3 from passthru to inbound
 # 2.7     Trevor Keon        2008-Jul-18 Added NZ16 interfaces
 # 2.8     Trevor Keon        2008-Oct-02 Removed Exel WH interfaces
+# 2.9     Trevor Keon        2009-Jan-15 Added ATLCIS09 & CISATL05 for AU41/42-FG
 # 
 #-------------------------------------------------------------------------------
 #
@@ -293,21 +294,23 @@ QL.OUT.ATLCIS03.15 = ics_inbound_dj.sh QL.OUT.ATLCIS03.15 ATLCIS03 ATLCIS03.15 *
 QL.OUT.ATLCIS07.15 = ics_inbound_dj.sh QL.OUT.ATLCIS07.15 ATLCIS07 ATLCIS07.15 *NONE "-count 200"
 QL.OUT.ATLCIS08.15 = ics_inbound_dj.sh QL.OUT.ATLCIS08.15 ATLCIS08 ATLCIS08.15 *NONE "-count 200"
 
-# Tolas Snack Somerton (Linfox) (AU42-FG)
+# Tolas Snack Somerton (Linfox) (AU41-FG)
 QL.OUT.ATLCIS04.16 = ics_inbound_dj.sh QL.OUT.ATLCIS04.16 ATLCIS04 ATLCIS04.16 *NONE "-count 200"
 QL.OUT.ATLCIS01.16 = ics_inbound_dj.sh QL.OUT.ATLCIS01.16 ATLCIS01 ATLCIS01.16 *NONE "-count 200"
 QL.OUT.ATLCIS05.16 = ics_inbound_dj.sh QL.OUT.ATLCIS05.16 ATLCIS05 ATLCIS05.16 *NONE "-count 200"
 QL.OUT.ATLCIS03.16 = ics_inbound_dj.sh QL.OUT.ATLCIS03.16 ATLCIS03 ATLCIS03.16 *NONE "-count 9900"
 QL.OUT.ATLCIS07.16 = ics_inbound_dj.sh QL.OUT.ATLCIS07.16 ATLCIS07 ATLCIS07.16 *NONE "-count 200"
 QL.OUT.ATLCIS08.16 = ics_inbound_dj.sh QL.OUT.ATLCIS08.16 ATLCIS08 ATLCIS08.16 *NONE "-count 200"
+QL.OUT.ATLCIS09.16 = ics_inbound_dj.sh QL.OUT.ATLCIS09.16 ATLCIS09 ATLCIS09.16 *NONE "-count 200"
 
-# Tolas Snack Somerton (Linfox) (AU41-FG)
+# Tolas Snack Somerton (Linfox) (AU42-FG)
 QL.OUT.ATLCIS04.17 = ics_inbound_dj.sh QL.OUT.ATLCIS04.17 ATLCIS04 ATLCIS04.17 *NONE "-count 200"
 QL.OUT.ATLCIS01.17 = ics_inbound_dj.sh QL.OUT.ATLCIS01.17 ATLCIS01 ATLCIS01.17 *NONE "-count 200"
 QL.OUT.ATLCIS05.17 = ics_inbound_dj.sh QL.OUT.ATLCIS05.17 ATLCIS05 ATLCIS05.17 *NONE "-count 200"
 QL.OUT.ATLCIS03.17 = ics_inbound_dj.sh QL.OUT.ATLCIS03.17 ATLCIS03 ATLCIS03.17 *NONE "-count 9900"
 QL.OUT.ATLCIS07.17 = ics_inbound_dj.sh QL.OUT.ATLCIS07.17 ATLCIS07 ATLCIS07.17 *NONE "-count 200"
 QL.OUT.ATLCIS08.17 = ics_inbound_dj.sh QL.OUT.ATLCIS08.17 ATLCIS08 ATLCIS08.17 *NONE "-count 200"
+QL.OUT.ATLCIS09.17 = ics_inbound_dj.sh QL.OUT.ATLCIS09.17 ATLCIS09 ATLCIS09.17 *NONE "-count 200"
 
 # Tolas Snack Somerton (Linfox) (AU45-FG)
 QL.OUT.ATLCIS04.18 = ics_inbound_dj.sh QL.OUT.ATLCIS04.18 ATLCIS04 ATLCIS04.18 *NONE "-count 200"
@@ -349,6 +352,7 @@ QL.TLBICS10 = ics_inbound_mq.sh QL.TLBICS10 WMSCIS02.3
 
 #Tolas Snack Somerton  (Linfox)-> ICS - AU41-FG
 QL.TLCICS05 = ics_passthru_mq.sh QL.TLCICS05 CISATL02
+QL.TLCICS04 = ics_passthru_mq.sh QL.TLCICS04 CISATL05
 QL.TLCICS09 = ics_passthru_mq.sh QL.TLCICS09 CISATL04
 QL.TLCICS06 = ics_passthru_mq.sh QL.TLCICS06 CISATL06
 QL.TLCICS20 = ics_passthru_mq.sh QL.TLCICS20 CISATL20
@@ -361,6 +365,7 @@ QL.TLCICS10 = ics_inbound_mq.sh QL.TLCICS10 WMSCIS02.3
 
 #Tolas Snack Linfox Ballarat -> ICS - AU42-FG
 QL.TLDICS05 = ics_passthru_mq.sh QL.TLDICS05 CISATL02
+QL.TLDICS04 = ics_passthru_mq.sh QL.TLDICS04 CISATL05
 QL.TLDICS09 = ics_passthru_mq.sh QL.TLDICS09 CISATL04
 QL.TLDICS06 = ics_passthru_mq.sh QL.TLDICS06 CISATL06
 QL.TLDICS20 = ics_passthru_mq.sh QL.TLDICS20 CISATL20
