Added interfaces for AU42 in the test environment.

--- a/SOURCE/PDB/BESPOKE/MCA/UNIX/TEST/mqs_trigger_QM0077T.config
+++ b/SOURCE/PDB/BESPOKE/MCA/UNIX/TEST/mqs_trigger_QM0077T.config
@@ -11,6 +11,7 @@
 # Version Name                  Date        Comments
 # ------- ------------------ ----------- ---------------------------------------
 # 1.0     Trevor Keon        2008-Mar-05 Initial release
+# 1.1     Trevor Keon        2009-Feb-03 Added AU42 interfaces
 #-------------------------------------------------------------------------------
 
 # {Source Queue} {Script} {Queue} {Interface ID} {Interface ID} {FWD Q} {DJ STOP}
@@ -18,6 +19,10 @@
 
 # TEST -------------------------------------------------------------------------
 
-# Tolas interfaces
+# Tolas AU41 interfaces
 QL.TOLDCO01.TEST = ics_inbound_mq.sh QL.TOLDCO01.TEST TOLPDB01.5
 QL.TOLDCO02.TEST = ics_inbound_mq.sh QL.TOLDCO02.TEST TOLPDB02.5
+
+# Tolas AU42 interfaces
+QL.TOLDCO12.TEST = ics_inbound_mq.sh QL.TOLDCO12.TEST TOLPDB11.5
+QL.TOLDCO13.TEST = ics_inbound_mq.sh QL.TOLDCO13.TEST TOLPDB12.5
