Added custom files for PTS, CAN and PMX.

--- a/SOURCE/LICS/BESPOKE/EFEX/UNIX/TEST/ics_loader.config
+++ b/SOURCE/LICS/BESPOKE/EFEX/UNIX/TEST/ics_loader.config
@@ -12,6 +12,7 @@
 # ------- --------------------- ----------- --------------------------------
 # 1.0     Trevor Keon           2008-04-03  Original
 # 1.7     Trevor Keon           2008-10-23  Add SHLIB_PATH
+# 1.8     Trevor Keon           2009-05-04  Changed from WODU003 to APU003
 #
 #############################################################################
 
@@ -21,13 +22,13 @@ ARCHIVE_PATH    /ics/efex/test/archive
 WEBVIEW_PATH    /ics/efex/test/webview
 ICS_CLASS_PATH  /ics/efex/test/java
 JAVA_PATH       /opt/java1.4/jre/bin/java
-SHLIB_PATH      /ics/lad/sapjco32
+SHLIB_PATH      /ics/sapjco32
 WORK_PATH       /ics/efex/test/work
 BIN_PATH        /ics/efex/test/bin
 LOGFILE         /ics/efex/test/log/ics_integration.log
 
-SERVER          WODU003.AP.MARS
-AMI_TIER        test
+SERVER          APU003.AP.MARS
+AMI_TIER        QM0083T
 SYS_TIER        test
 ENV_VAR         /usr/local/bin/ami_settier 
 DATABASE        AP0088T
