Updated config files to contain accurate information. Updated lics_site_overview.xls spreadsheet with latest information around the sites and their ICS installations.

--- a/SOURCE/LICS/BESPOKE/EFEX/UNIX/PRODUCTION/ics_loader.config
+++ b/SOURCE/LICS/BESPOKE/EFEX/UNIX/PRODUCTION/ics_loader.config
@@ -12,6 +12,7 @@
 # ------- --------------------- ----------- --------------------------------
 # 1.0     Trevor Keon           2008-04-03  Original
 # 1.7     Trevor Keon           2008-10-23  Add SHLIB_PATH
+# 1.8     Trevor Keon           2009-06-11  Configured for APU002
 #
 #############################################################################
 INBOUND_PATH    /ics/efex/prod/inbound
@@ -25,8 +26,8 @@ WORK_PATH       /ics/efex/prod/work
 BIN_PATH        /ics/efex/prod/bin
 LOGFILE         /ics/efex/prod/log/ics_integration.log
 
-SERVER          WODU002.AP.MARS
-AMI_TIER        prod
+SERVER          APU002.AP.MARS
+AMI_TIER        APQM002P
 SYS_TIER        prod
 ENV_VAR         /usr/local/bin/ami_settier 
 DATABASE        AP0085P
