--- a/SOURCE/LICS/BESPOKE/PMX/UNIX/PRODUCTION/ics_loader.config
+++ b/SOURCE/LICS/BESPOKE/PMX/UNIX/PRODUCTION/ics_loader.config
@@ -12,28 +12,26 @@
 # ------- --------------------- ----------- --------------------------------
 # 1.0     Linden Glen           24-03-2004  Original
 # 1.1     John Eitel            19-10-2004  Add SYS_TIER and ORA_LOG
-# 1.2     G.Brooder             05-01-2008  username ics_app to lics_app
-# 1.7     Trevor Keon           29-04-2009  Converted to new standard
+# 1.2     G.Brooder             12-01-2009  Username to lics_app CC 42612
+# 1.7     Trevor Keon           03-06-2009  Converted to new standard
 #############################################################################
 
-INBOUND_PATH     /ics/test/inbound
-OUTBOUND_PATH	 /ics/test/outbound
-ARCHIVE_PATH     /ics/test/archive
-WEBVIEW_PATH	 /ics/test/webview
-ICS_CLASS_PATH   /ics/test/java
-JAVA_PATH        /opt/IBMJava2-amd64-142/jre/bin/java
+INBOUND_PATH     /ics/pmx/prod/inbound
+OUTBOUND_PATH	 /ics/pmx/prod/outbound
+ARCHIVE_PATH     /ics/pmx/prod/archive
+WEBVIEW_PATH	 /ics/pmx/prod/webview
+ICS_CLASS_PATH   /ics/pmx/prod/java
+JAVA_PATH        /opt/java1.4/jre/bin/java
 SHLIB_PATH       /ics/sapjco32
-WORK_PATH        /ics/test/work
-BIN_PATH         /ics/test/bin
-LOGFILE          /ics/test/log/ics_integration.log
+WORK_PATH        /ics/pmx/prod/work
+BIN_PATH         /ics/pmx/prod/bin
+LOGFILE          /ics/pmx/prod/log/ics_integration.log
 
-SERVER           MTOLX439.DC.MARS
-USE_AMI          no
-AMI_TIER         test
-SYS_TIER         test
+SERVER           WODU002.AP.MARS
+AMI_TIER         prod
+SYS_TIER         prod
 ENV_VAR          /usr/local/bin/ami_settier 
-DATABASE         DB0919T
+DATABASE         AP0110P
 USERNAME         lics_app
-PASSWORD         licsnorth
-
+PASSWORD         licsappcats
 
