--- a/SOURCE/LICS/BESPOKE/PMX/UNIX/TEST/ics_loader.config
+++ b/SOURCE/LICS/BESPOKE/PMX/UNIX/TEST/ics_loader.config
@@ -22,7 +22,7 @@ ARCHIVE_PATH     /ics/pmx/test/archive
 WEBVIEW_PATH	 /ics/pmx/test/webview
 ICS_CLASS_PATH   /ics/pmx/test/java
 JAVA_PATH        /opt/java1.4/jre/bin/java
-SHLIB_PATH       /ics/pmx/sapjco32
+SHLIB_PATH       /ics/lad/sapjco32
 WORK_PATH        /ics/pmx/test/work
 BIN_PATH         /ics/pmx/test/bin
 LOGFILE          /ics/pmx/test/log/ics_integration.log
@@ -35,7 +35,4 @@ DATABASE         AP0108T
 USERNAME         lics_app
 PASSWORD         licsappcats
 
-# Required for MFANZ
-TARG_PATH        /ics/cdw/test/inbound
-TARG_QMGR        WODU03D1
 
