--- a/SOURCE/LICS/BESPOKE/PTS/UNIX/PRODUCTION/ics_loader.config
+++ b/SOURCE/LICS/BESPOKE/PTS/UNIX/PRODUCTION/ics_loader.config
@@ -14,21 +14,22 @@
 # 1.7     Trevor Keon           2008-10-23  Add SHLIB_PATH
 #
 #############################################################################
-INBOUND_PATH    /ics/efex/prod/inbound
-OUTBOUND_PATH   /ics/efex/prod/outbound
-ARCHIVE_PATH    /ics/efex/prod/archive
-WEBVIEW_PATH    /ics/efex/prod/webview
-ICS_CLASS_PATH  /ics/efex/prod/java
+
+INBOUND_PATH    /ics/pts/prod/inbound
+OUTBOUND_PATH   /ics/pts/prod/outbound
+ARCHIVE_PATH    /ics/pts/prod/archive
+WEBVIEW_PATH    /ics/pts/prod/webview
+ICS_CLASS_PATH  /ics/pts/prod/java
 JAVA_PATH       /opt/java1.4/jre/bin/java
 SHLIB_PATH      /ics/sapjco32
-WORK_PATH       /ics/efex/prod/work
-BIN_PATH        /ics/efex/prod/bin
-LOGFILE         /ics/efex/prod/log/ics_integration.log
+WORK_PATH       /ics/pts/prod/work
+BIN_PATH        /ics/pts/prod/bin
+LOGFILE         /ics/pts/prod/log/ics_integration.log
 
 SERVER          WODU002.AP.MARS
-AMI_TIER        prod
+AMI_TIER        WODU02P1
 SYS_TIER        prod
 ENV_VAR         /usr/local/bin/ami_settier 
-DATABASE        AP0085P
+DATABASE        WOD050
 USERNAME        lics_app
-PASSWORD        licsfexapp
+PASSWORD        licsnebula
